extends Control
## UI –¢–µ–ª–µ—Ñ–æ–Ω—É (—è–∫ iPhone)

## –í—É–∑–ª–∏ (–±—É–¥—É—Ç—å –ø—Ä–∏–≤'—è–∑–∞–Ω—ñ –≤ —Å—Ü–µ–Ω—ñ)
@onready var search_bar: LineEdit = %SearchBar
@onready var tab_bar: TabBar = %TabBar
@onready var contact_list: VBoxContainer = %ContactList
@onready var call_screen: Panel = %CallScreen
@onready var call_photo: TextureRect = %CallPhoto
@onready var call_name: Label = %CallName
@onready var call_status: Label = %CallStatus
@onready var call_timer: Label = %CallTimer
@onready var hangup_button: Button = %HangupButton

## –®–∞–±–ª–æ–Ω –¥–ª—è –µ–ª–µ–º–µ–Ω—Ç—É –∫–æ–Ω—Ç–∞–∫—Ç—É
var contact_entry_scene = preload("res://ui/contact_entry.tscn")

## –ü–æ—Ç–æ—á–Ω–∏–π —Ä–µ–∂–∏–º
enum Tab { FAVORITES, RECENT, CONTACTS }
var current_tab: Tab = Tab.CONTACTS

## –ü–æ—Ç–æ—á–Ω–∏–π –¥–∑–≤—ñ–Ω–æ–∫
var current_contact: ContactResource = null
var call_timer_active: bool = false

func _ready():
	# –ó'—î–¥–Ω–∞—Ç–∏ —Å–∏–≥–Ω–∞–ª–∏
	search_bar.text_changed.connect(_on_search_changed)
	tab_bar.tab_changed.connect(_on_tab_changed)
	hangup_button.pressed.connect(_on_hangup_pressed)
	
	PhoneSystemManager.call_started.connect(_on_call_started)
	PhoneSystemManager.call_ended.connect(_on_call_ended)
	PhoneSystemManager.contacts_loaded.connect(_refresh_list)
	
	# –•–æ–≤–∞—Ç–∏ –µ–∫—Ä–∞–Ω –¥–∑–≤—ñ–Ω–∫—É
	call_screen.visible = false
	
	# –ù–∞–ª–∞—à—Ç—É–≤–∞—Ç–∏ –≤–∫–ª–∞–¥–∫–∏
	tab_bar.add_tab("‚≠ê –û–±—Ä–∞–Ω—ñ")
	tab_bar.add_tab("üïê –ù–µ–¥–∞–≤–Ω—ñ")
	tab_bar.add_tab("üë• –ö–æ–Ω—Ç–∞–∫—Ç–∏")
	tab_bar.current_tab = 2  # –ö–æ–Ω—Ç–∞–∫—Ç–∏ –∑–∞ –∑–∞–º–æ–≤—á—É–≤–∞–Ω–Ω—è–º
	
	_refresh_list()

## ==========================================
## –°–ü–ò–°–û–ö –ö–û–ù–¢–ê–ö–¢–Ü–í
## ==========================================

func _refresh_list():
	# –û–Ω–æ–≤–∏—Ç–∏ —Å–ø–∏—Å–æ–∫ –∫–æ–Ω—Ç–∞–∫—Ç—ñ–≤
	# –û—á–∏—Å—Ç–∏—Ç–∏ —Å–ø–∏—Å–æ–∫
	for child in contact_list.get_children():
		child.queue_free()
	
	var contacts: Array[ContactResource] = []
	
	# –û—Ç—Ä–∏–º–∞—Ç–∏ –∫–æ–Ω—Ç–∞–∫—Ç–∏ –∑–∞–ª–µ–∂–Ω–æ –≤—ñ–¥ –≤–∫–ª–∞–¥–∫–∏
	match current_tab:
		Tab.FAVORITES:
			contacts = PhoneSystemManager.get_favorites()
		Tab.RECENT:
			_show_recent_calls()
			return
		Tab.CONTACTS:
			var query = search_bar.text
			contacts = PhoneSystemManager.search_contacts(query)
	
	# –î–æ–¥–∞—Ç–∏ –∫–æ–Ω—Ç–∞–∫—Ç–∏ –≤ —Å–ø–∏—Å–æ–∫
	for contact in contacts:
		_add_contact_entry(contact)
	
	# –Ø–∫—â–æ —Å–ø–∏—Å–æ–∫ –ø–æ—Ä–æ–∂–Ω—ñ–π
	if contacts.is_empty():
		var label = Label.new()
		label.text = "–ö–æ–Ω—Ç–∞–∫—Ç—ñ–≤ –Ω–µ –∑–Ω–∞–π–¥–µ–Ω–æ"
		label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		label.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5))
		contact_list.add_child(label)

func _add_contact_entry(contact: ContactResource):
	# –î–æ–¥–∞—Ç–∏ –µ–ª–µ–º–µ–Ω—Ç –∫–æ–Ω—Ç–∞–∫—Ç—É
	var entry = contact_entry_scene.instantiate()
	contact_list.add_child(entry)
	
	# –ù–∞–ª–∞—à—Ç—É–≤–∞—Ç–∏ –µ–ª–µ–º–µ–Ω—Ç
	entry.setup(contact)
	entry.call_pressed.connect(func(): _on_contact_call_pressed(contact.id))

func _show_recent_calls():
	# –ü–æ–∫–∞–∑–∞—Ç–∏ –Ω–µ–¥–∞–≤–Ω—ñ –¥–∑–≤—ñ–Ω–∫–∏
	var recent = PhoneSystemManager.get_recent_contacts()
	
	if recent.is_empty():
		var label = Label.new()
		label.text = "–ù–µ–º–∞—î –Ω–µ–¥–∞–≤–Ω—ñ—Ö –¥–∑–≤—ñ–Ω–∫—ñ–≤"
		label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		label.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5))
		contact_list.add_child(label)
		return
	
	for call_data in recent:
		var contact_id = call_data.contact_id
		var contact = PhoneSystemManager.get_contact(contact_id)
		if !contact:
			continue
		
		var entry = contact_entry_scene.instantiate()
		contact_list.add_child(entry)
		entry.setup(contact, call_data)
		entry.call_pressed.connect(func(): _on_contact_call_pressed(contact_id))

## ==========================================
## –î–ó–í–Ü–ù–ö–ò
## ==========================================

func _on_contact_call_pressed(contact_id: String):
	# –ù–∞—Ç–∏—Å–Ω—É—Ç–æ –∫–Ω–æ–ø–∫—É –¥–∑–≤—ñ–Ω–∫–∞
	if !PhoneSystemManager.can_call(contact_id):
		_show_error("–ù–µ–º–æ–∂–ª–∏–≤–æ –∑–∞—Ç–µ–ª–µ—Ñ–æ–Ω—É–≤–∞—Ç–∏")
		return
	
	PhoneSystemManager.make_call(contact_id)

func _on_call_started(_contact_id: String, contact: ContactResource):
	# –î–∑–≤—ñ–Ω–æ–∫ –ø–æ—á–∞–≤—Å—è
	current_contact = contact
	
	# –ü–æ–∫–∞–∑–∞—Ç–∏ –µ–∫—Ä–∞–Ω –¥–∑–≤—ñ–Ω–∫–∞
	call_screen.visible = true
	call_photo.texture = contact.photo if contact.photo else null
	call_name.text = contact.display_name
	call_status.text = "–í–∏–∫–ª–∏–∫..."
	call_timer.text = "00:00"
	
	# –û–±—Ä–æ–±–∏—Ç–∏ —Ç–∏–ø –¥–∑–≤—ñ–Ω–∫–∞
	match contact.call_type:
		0:  # NoAnswer
			_handle_no_answer()
		1:  # WrongNumber
			_handle_wrong_number()
		2:  # Quick
			_handle_quick_chat()
		3:  # Short
			_handle_short_dialogue()
		4:  # Full
			_handle_full_dialogue()
		5:  # MultiScene
			_handle_multi_scene_dialogue()

func _on_call_ended(_contact_id: String, _success: bool):
	# –î–∑–≤—ñ–Ω–æ–∫ –∑–∞–≤–µ—Ä—à–µ–Ω–æ
	call_timer_active = false
	await get_tree().create_timer(0.5).timeout
	call_screen.visible = false
	current_contact = null

func _on_hangup_pressed():
	# –ü–æ–∫–ª–∞—Å—Ç–∏ —Å–ª—É—Ö–∞–≤–∫—É
	PhoneSystemManager.end_call(false)

## ==========================================
## –¢–ò–ü–ò –î–ó–í–Ü–ù–ö–Ü–í
## ==========================================

func _handle_no_answer():
	# –ù–µ –≤—ñ–¥–ø–æ–≤—ñ–¥–∞—î
	await get_tree().create_timer(3.0).timeout
	call_status.text = "–ê–±–æ–Ω–µ–Ω—Ç –Ω–µ –≤—ñ–¥–ø–æ–≤—ñ–¥–∞—î"
	await get_tree().create_timer(2.0).timeout
	PhoneSystemManager.end_call(false)

func _handle_wrong_number():
	# –°—Ç–∞—Ä–∏–π –Ω–æ–º–µ—Ä
	await get_tree().create_timer(2.0).timeout
	call_status.text = "–ù–æ–º–µ—Ä –Ω–µ –æ–±—Å–ª—É–≥–æ–≤—É—î—Ç—å—Å—è"
	await get_tree().create_timer(2.0).timeout
	PhoneSystemManager.end_call(false)

func _handle_quick_chat():
	# –®–≤–∏–¥–∫–∏–π —á–∞—Ç
	call_status.text = "–ó'—î–¥–Ω–∞–Ω–æ"
	_start_call_timer()
	
	# –ü–æ–∫–∞–∑–∞—Ç–∏ —à–≤–∏–¥–∫—ñ –ø–æ–≤—ñ–¥–æ–º–ª–µ–Ω–Ω—è
	if current_contact.quick_messages.is_empty():
		current_contact.quick_messages = [
			"–ê–ª–ª–æ?",
			"–ó–∞–π–Ω—è—Ç–∏–π, –ø–µ—Ä–µ–¥–∑–≤–æ–Ω—é!",
			"*–ì—É–¥–∫–∏*"
		]
	
	for message in current_contact.quick_messages:
		call_status.text = message
		await get_tree().create_timer(1.5).timeout
	
	PhoneSystemManager.end_call(true)

func _handle_short_dialogue():
	# –ö–æ—Ä–æ—Ç–∫–∏–π –¥—ñ–∞–ª–æ–≥
	call_status.text = "–ó'—î–¥–Ω–∞–Ω–æ"
	_start_call_timer()
	
	if current_contact.dialogue_file.is_empty():
		_handle_quick_chat()  # Fallback
		return
	
	# –ó–∞–ø—É—Å—Ç–∏—Ç–∏ –¥—ñ–∞–ª–æ–≥
	var dialogue = load(current_contact.dialogue_file)
	if dialogue:
		DialogueManager.show_example_dialogue_balloon(
			dialogue,
			current_contact.dialogue_start
		)
		await DialogueManager.dialogue_ended
	
	PhoneSystemManager.end_call(true)

func _handle_full_dialogue():
	# –ü–æ–≤–Ω–∏–π –¥—ñ–∞–ª–æ–≥
	_handle_short_dialogue()  # –¢–∞ —Å–∞–º–∞ –ª–æ–≥—ñ–∫–∞

func _handle_multi_scene_dialogue():
	# –ë–∞–≥–∞—Ç–æ—Å—Ü–µ–Ω–Ω–∏–π –¥—ñ–∞–ª–æ–≥
	call_status.text = "–ó'—î–¥–Ω–∞–Ω–æ"
	_start_call_timer()
	
	if current_contact.dialogue_file.is_empty():
		_handle_quick_chat()
		return
	
	# –ó–∞–ø—É—Å—Ç–∏—Ç–∏ –±–∞–≥–∞—Ç–æ—Å—Ü–µ–Ω–Ω–∏–π –¥—ñ–∞–ª–æ–≥
	var dialogue = load(current_contact.dialogue_file)
	if !dialogue:
		PhoneSystemManager.end_call(false)
		return
	
	# 9 —Å—Ü–µ–Ω (—è–∫ –ø—Ä–∏–∫–ª–∞–¥)
	var scenes = [
		"scene_1", "scene_2", "scene_3",
		"scene_4", "scene_5", "scene_6",
		"scene_7", "scene_8", "scene_9"
	]
	
	for i in range(scenes.size()):
		# –ü–æ–∫–∞–∑–∞—Ç–∏ —ñ–Ω–¥–∏–∫–∞—Ç–æ—Ä —Å—Ü–µ–Ω–∏
		call_timer.text = "–ß–∞—Å—Ç–∏–Ω–∞ %d/%d" % [i + 1, scenes.size()]
		
		# –ó–∞–ø—É—Å—Ç–∏—Ç–∏ —Å—Ü–µ–Ω—É
		DialogueManager.show_example_dialogue_balloon(
			dialogue,
			scenes[i]
		)
		await DialogueManager.dialogue_ended
		
		# –ü–∞—É–∑–∞ –º—ñ–∂ —Å—Ü–µ–Ω–∞–º–∏
		if i < scenes.size() - 1:
			await get_tree().create_timer(0.5).timeout
	
	PhoneSystemManager.end_call(true)

## ==========================================
## –¢–ê–ô–ú–ï–† –î–ó–í–Ü–ù–ö–ê
## ==========================================

func _start_call_timer():
	# –ó–∞–ø—É—Å—Ç–∏—Ç–∏ —Ç–∞–π–º–µ—Ä –¥–∑–≤—ñ–Ω–∫–∞
	call_timer_active = true
	_update_call_timer()

func _update_call_timer():
	# –û–Ω–æ–≤–∏—Ç–∏ —Ç–∞–π–º–µ—Ä
	var elapsed = 0
	while call_timer_active:
		var minutes = elapsed / 60
		var seconds = elapsed % 60
		call_timer.text = "%02d:%02d" % [minutes, seconds]
		await get_tree().create_timer(1.0).timeout
		elapsed += 1

## ==========================================
## –ü–û–î–Ü–á UI
## ==========================================

func _on_search_changed(_new_text: String):
	# –ü–æ—à—É–∫ –∑–º—ñ–Ω–∏–≤—Å—è
	_refresh_list()

func _on_tab_changed(tab: int):
	# –í–∫–ª–∞–¥–∫–∞ –∑–º—ñ–Ω–∏–ª–∞—Å—å
	current_tab = tab as Tab
	_refresh_list()

func _show_error(message: String):
	# –ü–æ–∫–∞–∑–∞—Ç–∏ –ø–æ–º–∏–ª–∫—É
	# TODO: –î–æ–¥–∞—Ç–∏ UI –¥–ª—è –ø–æ–º–∏–ª–æ–∫
	print("‚ùå ", message)

## ==========================================
## –ü–£–ë–õ–Ü–ß–ù–Ü –ú–ï–¢–û–î–ò
## ==========================================

func open_phone():
	# –í—ñ–¥–∫—Ä–∏—Ç–∏ —Ç–µ–ª–µ—Ñ–æ–Ω
	visible = true

func close_phone():
	# –ó–∞–∫—Ä–∏—Ç–∏ —Ç–µ–ª–µ—Ñ–æ–Ω
	visible = false
	# –Ø–∫—â–æ –π–¥–µ –¥–∑–≤—ñ–Ω–æ–∫ - –∑–∞–≤–µ—Ä—à–∏—Ç–∏
	if !PhoneSystemManager.current_call_id.is_empty():
		PhoneSystemManager.end_call(false)
